@@ -233,6 +233,7 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/pygame_event.html#Event>pygame.event.Event</a> - create new event object<br>
 <a href=ref/pygame_event.html#event_name>pygame.event.event_name</a> - name for event type<br>
 <a href=ref/pygame_event.html#get>pygame.event.get</a> - get all of an event type from the queue<br>
+<a href=ref/pygame_event.html#get_blocked>pygame.event.get_blocked</a> - checks if an event is being blocked<br>
 <a href=ref/pygame_event.html#get_grab>pygame.event.get_grab</a> - query the state of input grabbing<br>
 <a href=ref/pygame_event.html#peek>pygame.event.peek</a> - query if any of event types are waiting<br>
 <a href=ref/pygame_event.html#poll>pygame.event.poll</a> - get an available event<br>
